# My-refrigerator

./: .gitignore  Dockerfile  README.md  package.json  start-local.command  tsconfig.shared.json
apps/client/: .env.example  .eslintrc.cjs  index.html  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/client/src/: App.tsx  main.tsx
apps/miniprogram/: package.json  project.config.json  tsconfig.json  vitest.config.ts
apps/miniprogram/config/: index.ts
apps/server/: .env.example  Dockerfile  README.md  package.json  pyproject.toml
apps/server/src/server/: __init__.py  main.py
apps/server/src/server/core/: __init__.py  config.py  dependencies.py  logging.py
apps/server/src/server/routers/: __init__.py  auth.py  chat.py  fridge.py  health.py  meals.py  photos.py  recipes.py  shelf_life.py  shopping.py  vision.py
apps/server/src/server/schemas/: __init__.py  auth.py  base.py  fridge.py  meals.py  photos.py  recipes.py  shopping.py  vision.py
apps/server/src/server/services/: __init__.py  auth.py  local_gateway.py  openai_client.py  recipes.py  supabase.py
apps/server/src/smart_fridge_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: api-contract.md  mvp-delivery-plan.md  prd-mvp.md
docs/plans/: 2026-04-08-miniprogram-ux-design.md  2026-04-08-smart-fridge-implementation.md  2026-04-08-smart-fridge-redesign-design.md  2026-04-08-ux-optimization-v2.md  2026-04-08-ux-redesign-v3.md
infra/: README.md
infra/supabase/: README.md
(+78 files in other folders)
