[project]
name = "smart-fridge-server"
version = "0.1.0"
description = "FastAPI backend for My Refrigerator MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<0.112",
  "uvicorn[standard]>=0.27,<0.28",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2,<3",
  "python-multipart>=0.0.9,<0.0.10",
  "httpx>=0.27,<0.28",
  "supabase>=2.3,<3",
  "asyncpg>=0.29,<0.30",
  "aiofiles>=23.2,<24",
  "loguru>=0.7,<0.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<0.24",
  "httpx>=0.27,<0.28",
  "ruff>=0.4,<0.5",
  "mypy>=1.9,<1.10"
]

[project.scripts]
smart-fridge-server = "server.main:run"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
